src/objects/Workflow__c.object
<CustomObject>
    <fields>
        <fullName>Countries__c</fullName>
        <description>To which countries, this workflow should be excluded for account profiling.</description>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalProductShowtoallcountries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product will be shown to all countries regardless of the countries&apos; field selection.
TFUS-000006035</description>
        <inlineHelpText>If checked, this product will be shown to all countries regardless of the countries&apos; field selection.</inlineHelpText>
        <label>Global Product (Show to all countries)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkflowLabel__c</fullName>
        <label>Workflow Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>workflows</valueSetName>
        </valueSet>
    </fields>
    <label>Workflow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WorkflowLabel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>